--- a/secao01-introdução-a-Frontend-e-JavaScript-assincrono/dia-01-ambiente-de-desenvolvimento/geradorDeSenhas/src/package.json
+++ b/secao01-introdução-a-Frontend-e-JavaScript-assincrono/dia-01-ambiente-de-desenvolvimento/geradorDeSenhas/src/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite --open"
+    "dev": "vite --open",
+    "build": "vite build"
   },
   "author": "beddie",
   "license": "ISC",
